--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -2,14 +2,12 @@
 <html lang="en-US">
 	<head>
 
-		<title>{{ .Title }} | Kaldi</title>
+		<title>{{ .Title }} | The Hawaii Independent</title>
 		<link rel="stylesheet" href="/css/main.css"/>
 
 		<meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-
-		<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700" rel="stylesheet">
 
 		<!-- Favicons -->
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -21,7 +19,7 @@
 
 		<!-- Open Graph -->
 		<meta property="og:type" content="business.business">
-		<meta property="og:title" content="Kaldi | Great coffee with a conscience">
+		<meta property="og:title" content="The Hawaii Independent | Progressive news & views">
 		<meta property="og:url" content="/">
 		<meta property="og:image" content="/og-image.jpg">
 
